--- a/shlibs/uuid/src/Makefile.am
+++ b/shlibs/uuid/src/Makefile.am
@@ -31,7 +31,7 @@ test_%: %.c
 
 
 # move lib from $(usrlibexecdir) to $(libdir) if needed
-install-data-hook:
+install-exec-hook:
 	if test "$(usrlibexecdir)" != "$(libdir)"; then \
 		mkdir -p $(DESTDIR)$(libdir); \
 		mv $(DESTDIR)$(usrlibexecdir)/libuuid.so.* $(DESTDIR)$(libdir); \
