--- a/misc-utils/Makefile.am
+++ b/misc-utils/Makefile.am
@@ -4,15 +4,15 @@ EXTRA_DIST = README.flushb uuidd.rc
 
 bin_PROGRAMS =
 sbin_PROGRAMS =
-usrsbinexec_PROGRAMS =
+usrsbin_exec_PROGRAMS =
 
-usrbinexec_PROGRAMS = cal ddate logger look mcookie \
+usrbin_exec_PROGRAMS = cal ddate logger look mcookie \
 	namei script whereis scriptreplay
 EXTRA_DIST += README.cal README.ddate README.namei README.namei2
 
 mcookie_SOURCES = mcookie.c ../lib/md5.c
 
-usrbinexec_SCRIPTS = chkdupexe
+usrbin_exec_SCRIPTS = chkdupexe
 
 CLEANFILES = chkdupexe
 
@@ -20,12 +20,12 @@ dist_man_MANS = cal.1 chkdupexe.1 ddate.1 logger.1 look.1 mcookie.1 \
 	namei.1 script.1 whereis.1 scriptreplay.1
 
 if BUILD_LIBUUID
-usrbinexec_PROGRAMS += uuidgen
+usrbin_exec_PROGRAMS += uuidgen
 dist_man_MANS += uuidgen.1
 uuidgen_LDADD = $(ul_libuuid_la)
 uuidgen_CFLAGS = -I$(ul_libuuid_srcdir)
 if BUILD_UUIDD
-usrsbinexec_PROGRAMS += uuidd
+usrsbin_exec_PROGRAMS += uuidd
 dist_man_MANS += uuidd.8
 uuidd_LDADD = $(ul_libuuid_la)
 uuidd_CFLAGS = -I$(ul_libuuid_srcdir)
@@ -66,7 +66,7 @@ endif
 
 if HAVE_NCURSES
 if LINUX
-usrbinexec_PROGRAMS += setterm
+usrbin_exec_PROGRAMS += setterm
 dist_man_MANS += setterm.1
 endif
 if HAVE_TINFO
@@ -83,18 +83,18 @@ dist_man_MANS += kill.1
 endif
 
 if BUILD_RENAME
-usrbinexec_PROGRAMS += rename
+usrbin_exec_PROGRAMS += rename
 dist_man_MANS += rename.1
 endif
 
 if BUILD_RESET
-dist_usrbinexec_SCRIPTS = reset
+dist_usrbin_exec_SCRIPTS = reset
 dist_man_MANS += reset.1
 endif
 EXTRA_DIST += README.reset reset.033c
 
 if BUILD_WRITE
-usrbinexec_PROGRAMS += write
+usrbin_exec_PROGRAMS += write
 dist_man_MANS += write.1
 write_CFLAGS = $(SUID_CFLAGS) $(AM_CFLAGS)
 write_LDFLAGS = $(SUID_LDFLAGS) $(AM_LDFLAGS)
@@ -102,8 +102,8 @@ write_LDFLAGS = $(SUID_LDFLAGS) $(AM_LDFLAGS)
 if USE_TTY_GROUP
 if MAKEINSTALL_DO_CHOWN
 install-exec-hook::
-	chgrp tty $(DESTDIR)$(usrbinexecdir)/write
-	chmod g+s $(DESTDIR)$(usrbinexecdir)/write
+	chgrp tty $(DESTDIR)$(usrbin_execdir)/write
+	chmod g+s $(DESTDIR)$(usrbin_execdir)/write
 endif
 endif
 endif
