--- a/shlibs/uuid/Makefile.am
+++ b/shlibs/uuid/Makefile.am
@@ -3,7 +3,7 @@ include $(top_srcdir)/config/include-Makefile.am
 SUBDIRS = src man
 
 # pkg-config stuff
-pkgconfigdir = $(usrlibexecdir)/pkgconfig
+pkgconfigdir = $(usrlib_execdir)/pkgconfig
 pkgconfig_DATA = uuid.pc
 
 EXTRA_DIST = uuid.pc uuid.pc.in
