build-sys: fix typo from 30688dde55f637c9b984809c685b61378b82805f
the fixes the usage of exec_prefix so configure will prepend the prefix again.

Signed-off-by: Robert Förster <Dessa@gmake.de>

--- a/configure.ac
+++ b/configure.ac
@@ -50,13 +50,13 @@ esac
 AC_SUBST([libdirname])
 
 # The original default values of {bin,sbin,lib}dir
-usrbin_execdir='${_exec_prefix}/bin'
+usrbin_execdir='${exec_prefix}/bin'
 AC_SUBST([usrbin_execdir])
 
-usrsbin_execdir='${_exec_prefix}/sbin'
+usrsbin_execdir='${exec_prefix}/sbin'
 AC_SUBST([usrsbin_execdir])
 
-usrlib_execdir='${_exec_prefix}/'$libdirname
+usrlib_execdir='${exec_prefix}/'$libdirname
 AC_SUBST([usrlib_execdir])
 
 
