--- a/shlibs/blkid/Makefile.am
+++ b/shlibs/blkid/Makefile.am
@@ -8,5 +8,5 @@ pkgconfig_DATA = blkid.pc
 
 dist_man_MANS = libblkid.3
 
-EXTRA_DIST = README.blkid blkid.pc blkid.pc.in libblkid.3
+EXTRA_DIST = README.blkid blkid.pc.in libblkid.3
 
