libblkid: add samples/topology.c
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/blkid/Makefile.am
+++ b/shlibs/blkid/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-SUBDIRS = src
+SUBDIRS = src samples
 
 # pkg-config stuff
 pkgconfigdir = $(usrlib_execdir)/pkgconfig
