mount: clean up mount.8
 * use "filesystem" everywhere (currently, the mount.8 man page is inconsistent
   and uses "file system" and "filesystem")

 * fix "The extN" to "The extN filesystem" (reported by Theodore Tso)

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -554,6 +554,9 @@ UTIL_CHECK_SYSCALL([ioprio_get],
   [sh*],      [289],
   [x86_64*],  [252])
 
+dnl Old versions of glib don't provide fallocate(2)
+UTIL_CHECK_SYSCALL([fallocate])
+AC_CHECK_FUNC([fallocate])
 
 AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[
 #include <time.h>
