libblkid: add partitions parsing support
This patch is large, but not invasive. There is a new code only.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -923,6 +923,7 @@ shlibs/blkid/Makefile
 shlibs/blkid/src/Makefile
 shlibs/blkid/src/superblocks/Makefile
 shlibs/blkid/src/topology/Makefile
+shlibs/blkid/src/partitions/Makefile
 shlibs/blkid/samples/Makefile
 shlibs/uuid/uuid.pc
 shlibs/uuid/Makefile
