--- a/shlibs/blkid/Makefile.am
+++ b/shlibs/blkid/Makefile.am
@@ -2,6 +2,10 @@ include $(top_srcdir)/config/include-Makefile.am
 
 SUBDIRS = src samples
 
+if ENABLE_GTK_DOC
+SUBDIRS += docs
+endif
+
 # pkg-config stuff
 pkgconfigdir = $(usrlib_execdir)/pkgconfig
 pkgconfig_DATA = blkid.pc
