--- a/shlibs/blkid/src/topology/Makefile.am
+++ b/shlibs/blkid/src/topology/Makefile.am
@@ -4,4 +4,6 @@ AM_CPPFLAGS += -I$(ul_libblkid_srcdir)
 libblkid_topology_la_LIBADD =
 
 noinst_LTLIBRARIES = libblkid_topology.la
-libblkid_topology_la_SOURCES = topology.c
+libblkid_topology_la_SOURCES =	topology.c \
+				topology.h \
+				sysfs.c
