libblkid: add MD topology support (for old kernels)
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/blkid/src/topology/Makefile.am
+++ b/shlibs/blkid/src/topology/Makefile.am
@@ -6,4 +6,5 @@ libblkid_topology_la_LIBADD =
 noinst_LTLIBRARIES = libblkid_topology.la
 libblkid_topology_la_SOURCES =	topology.c \
 				topology.h \
-				sysfs.c
+				sysfs.c \
+				md.c
