unshare: new command
New utility allows to run process with separate mount, UTC, IPC or
network namespaces.

[kzak@redhat.com: - some cosmetic changes in usage() and err() usage
                  - move "if BUILD_UNSHARE" to separate place in Makefile.am
                  - add unshare to .gitignore]

Signed-off-by: Mikhail Gusarov <dottedmag@dottedmag.net>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/sys-utils/Makefile.am
+++ b/sys-utils/Makefile.am
@@ -38,6 +38,11 @@ sbin_PROGRAMS += switch_root
 dist_man_MANS += switch_root.8
 endif
 
+if BUILD_UNSHARE
+usrbin_exec_PROGRAMS += unshare
+dist_man_MANS += unshare.1
+endif
+
 if BUILD_ARCH
 bin_PROGRAMS += arch
 dist_man_MANS += arch.1
