build-sys: enable silent rules if automake >= 1.11
Make the build silent if the system has a new enough automake,
otherwise keep the current behaviour.

Signed-off-by: Guillem Jover <guillem@hadrons.org>

--- a/configure.ac
+++ b/configure.ac
@@ -7,6 +7,9 @@ AC_CONFIG_MACRO_DIR([m4])
 
 AM_INIT_AUTOMAKE([check-news -Wall foreign 1.9 dist-bzip2])
 
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])],
+                            [AC_SUBST([AM_DEFAULT_VERBOSITY], [1])])
+
 AC_CONFIG_SRCDIR(mount/mount.c)
 
 AC_PREFIX_DEFAULT([/usr])
