Revert "build-sys: move fsck/mkfs for bfs/cramfs/minix to /usr"
See http://thread.gmane.org/gmane.linux.utilities.util-linux-ng/2689/focus=2690

This reverts commit d4fa971c42467fb69e5d89d28e1b98c491a1505a.

--- a/disk-utils/Makefile.am
+++ b/disk-utils/Makefile.am
@@ -8,18 +8,17 @@ endif
 dist_man_MANS = isosize.8 mkfs.8 mkswap.8 \
            fsck.minix.8 mkfs.minix.8 mkfs.bfs.8
 
-sbin_PROGRAMS = mkfs mkswap
+sbin_PROGRAMS = mkfs mkswap fsck.minix mkfs.minix mkfs.bfs
+fsck_minix_SOURCES = fsck.minix.c minix.h
+mkfs_minix_SOURCES = mkfs.minix.c minix.h $(utils_common)
+mkfs_bfs_SOURCES = mkfs.bfs.c $(utils_common)
 
 mkswap_SOURCES = mkswap.c $(utils_common) ../lib/wholedisk.c
 mkswap_LDADD =
 mkswap_CFLAGS =
 
 usrbin_exec_PROGRAMS = isosize
-usrsbin_exec_PROGRAMS = fsck.minix mkfs.minix mkfs.bfs
-
-fsck_minix_SOURCES = fsck.minix.c minix.h
-mkfs_minix_SOURCES = mkfs.minix.c minix.h $(utils_common)
-mkfs_bfs_SOURCES = mkfs.bfs.c $(utils_common)
+usrsbin_exec_PROGRAMS =
 
 if LINUX
 dist_man_MANS += fdformat.8 blockdev.8
@@ -43,7 +42,7 @@ endif
 
 if BUILD_CRAMFS
 cramfs_common = $(utils_common) cramfs.h cramfs_common.c cramfs_common.h
-usrsbin_exec_PROGRAMS += fsck.cramfs mkfs.cramfs
+sbin_PROGRAMS += fsck.cramfs mkfs.cramfs
 fsck_cramfs_SOURCES = fsck.cramfs.c $(cramfs_common)
 mkfs_cramfs_SOURCES = mkfs.cramfs.c $(cramfs_common) ../lib/md5.c
 fsck_cramfs_LDADD = -lz
