build-sys: fix out-of-source build
The blkid.h file is generated and stored in $top_builddir.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/disk-utils/Makefile.am
+++ b/disk-utils/Makefile.am
@@ -62,7 +62,7 @@ endif
 if BUILD_LIBBLKID
 # only in-tree libblkid has partitions parsing support
 mkswap_LDADD += $(ul_libblkid_la)
-mkswap_CFLAGS += -I$(ul_libblkid_srcdir)
+mkswap_CFLAGS += -I$(ul_libblkid_incdir)
 endif
 
 if HAVE_SELINUX
