--- a/mount/Makefile.am
+++ b/mount/Makefile.am
@@ -72,7 +72,7 @@ endif
 if BUILD_LIBBLKID
 ldadd_common += $(ul_libblkid_la)
 ldadd_static += $(ul_libblkid_la)
-cflags_common += -I$(ul_libblkid_srcdir)
+cflags_common += -I$(ul_libblkid_incdir)
 else
 ldadd_common += $(BLKID_LIBS)
 ldadd_static += $(BLKID_LIBS_STATIC)
