--- a/shlibs/blkid/docs/Makefile.am
+++ b/shlibs/blkid/docs/Makefile.am
@@ -1,3 +1,5 @@
+include $(top_srcdir)/config/include-Makefile.am
+
 ## Process this file with automake to produce Makefile.in
 
 # We require automake 1.10 at least.
@@ -48,7 +50,7 @@ FIXXREF_OPTIONS=
 # Used for dependencies. The docs will be rebuilt if any of these change.
 # e.g. HFILE_GLOB=$(top_srcdir)/gtk/*.h
 # e.g. CFILE_GLOB=$(top_srcdir)/gtk/*.c
-HFILE_GLOB=$(top_srcdir)/shlibs/blkid/src/blkid.h
+HFILE_GLOB=$(ul_libblkid_incdir)/blkid.h
 CFILE_GLOB=$(top_srcdir)/shlibs/blkid/src/*.c
 
 # Extra header to include when scanning, which are not under DOC_SOURCE_DIR
