build-sys: clean up gtk-doc stuff
* gtk-doc.make does not care about difference between $srcdir and $builddir
  and many things are generated into $srcdir. It's pretty difficult to support
  out-of-source build...

* gtk-doc expects that many generated files are stored in repository
  (we don't use XML templates, all documentation in source code only).

* we don't want to distribute generated html files, the docs is
  attractive for very small group of people...

Frankly, it would be nice to found something more robust and better
than gtk-doc.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/blkid/docs/Makefile.am
+++ b/shlibs/blkid/docs/Makefile.am
@@ -41,7 +41,7 @@ MKDB_OPTIONS=--sgml-mode --output-format=xml --name-space blkid
 MKTMPL_OPTIONS=
 
 # Extra options to supply to gtkdoc-mkhtml
-MKHTML_OPTIONS=--path=$(abs_srcdir) --path=$(abs_builddir)
+MKHTML_OPTIONS=
 
 # Extra options to supply to gtkdoc-fixref. Not normally needed.
 # e.g. FIXXREF_OPTIONS=--extra-dir=../gdk-pixbuf/html --extra-dir=../gdk/html
@@ -51,7 +51,7 @@ FIXXREF_OPTIONS=
 # e.g. HFILE_GLOB=$(top_srcdir)/gtk/*.h
 # e.g. CFILE_GLOB=$(top_srcdir)/gtk/*.c
 HFILE_GLOB=$(ul_libblkid_incdir)/blkid.h
-CFILE_GLOB=$(top_srcdir)/shlibs/blkid/src/*.c
+CFILE_GLOB=$(ul_libblkid_srcdir)/*.c
 
 # Extra header to include when scanning, which are not under DOC_SOURCE_DIR
 # e.g. EXTRA_HFILES=$(top_srcdir}/contrib/extra.h
@@ -59,7 +59,7 @@ EXTRA_HFILES=
 
 # Header files to ignore when scanning. Use base file name, no paths
 # e.g. IGNORE_HFILES=gtkdebug.h gtkintl.h
-IGNORE_HFILES=blkidP.h list.h partitions.h sublks.h toplgy.h aix.h dos.h
+IGNORE_HFILES=blkidP.h list.h partitions.h superblocks.h topology.h aix.h dos.h
 
 # Images to copy into HTML directory.
 # e.g. HTML_IMAGES=$(top_srcdir)/gtk/stock-icons/stock_about_24.png
@@ -67,7 +67,7 @@ HTML_IMAGES=
 
 # Extra SGML files that are included by $(DOC_MAIN_SGML_FILE).
 # e.g. content_files=running.sgml building.sgml changes-2.0.sgml
-content_files = version.xml libblkid-config.xml
+content_files = $(builddir)/version.xml $(srcdir)/libblkid-config.xml
 
 # SGML files where gtk-doc abbrevations (#GtkWidget) are expanded
 # These files must be listed here *and* in content_files
