build-sys: cleanup AM_CFLAGS usage
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/disk-utils/Makefile.am
+++ b/disk-utils/Makefile.am
@@ -15,7 +15,7 @@ mkfs_bfs_SOURCES = mkfs.bfs.c $(utils_common)
 
 mkswap_SOURCES = mkswap.c $(utils_common) ../lib/wholedisk.c
 mkswap_LDADD =
-mkswap_CFLAGS =
+mkswap_CFLAGS = $(AM_CFLAGS)
 
 usrbin_exec_PROGRAMS = isosize
 usrsbin_exec_PROGRAMS =
