--- a/fsck/Makefile.am
+++ b/fsck/Makefile.am
@@ -6,7 +6,7 @@ dist_man_MANS = fsck.8
 fsck_SOURCES = base_device.c fsck.c fsck.h ../lib/ismounted.c \
 	       ../lib/fsprobe.c ../lib/canonicalize.c
 fsck_LDADD =
-fsck_CFLAGS =
+fsck_CFLAGS = $(AM_CFLAGS)
 
 if BUILD_LIBBLKID
 fsck_LDADD += $(ul_libblkid_la)
